<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_message">Baby Tracker is by Joshua Buergel.  Please feel free to send me any suggestions at jbuergel@gmail.com.</string>
    <string name="app_name">Baby Tracker</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_more">More Software</string>
    <string name="ok">OK</string>
    <string name="unconfigured_widget_text">Please tap to configure the widget.</string>
    <string name="widget_title">Baby Tracker</string>
    <string name="baby_tracker_widget_label">Baby Tracker</string>
    <string name="baby_tracker_widget_label_crying">Baby Tracker (with crying)</string>
    <string name="baby_tracker_widget_label_diaper_only">Baby Tracker (diaper only)</string>
    <string name="reset_button_caption">Reset Tracking Data</string>
    <string name="report_button_caption">Get Detailed Reports</string>
    <string name="baby_name_category_title">Baby Information</string>
    <string name="baby_enable_title">Track This Baby</string>
    <string name="baby_enable_summary">Enable tracking for this baby.</string>
    <string name="baby_name_summary">Enter the name for this baby.</string>
    <string name="baby_name_title">Enter Name</string>
    <string name="enter_feeding_quantities_category_title">Enter Quantities</string>
    <string name="enter_feeding_quantities_key">enter_quantities</string>
    <string name="enter_feeding_quantities">Enter Quantities?</string>
    <string name="enter_feeding_quantities_summary">Enter quantities during feedings?</string>
    <string name="default_baby_name_1">Chuggy G</string>
    <string name="enable_baby_key_1">enable_baby_key_1</string>
    <string name="baby_name_key_1">baby_name_key_1</string>
    <string name="default_baby_name_2">Cheeseball</string>
    <string name="enable_baby_key_2">enable_baby_key_2</string>
    <string name="baby_name_key_2">baby_name_key_2</string>
    <string name="last_feeding_header">Last feeding:\n</string>
    <string name="last_wet_diaper_header">Last wet diaper:\n</string>
    <string name="last_bm_diaper_header">Last BM diaper:\n</string>
    <string name="last_custom_time_header">Last %1$s:\n</string>
    <string name="unconfigured_feeding">Tap to record a feeding</string>
    <string name="unconfigured_wet_diaper">Tap to record a wet diaper</string>
    <string name="unconfigured_bm_diaper">Tap to record a BM diaper</string>
    <string name="unconfigured_custom_time">Tap to record %1$s</string>
    <string name="help_text">Baby Tracker is a simple app designed to easily track with a single tap the times you last fed and changed your babies.  Select if you will be tracking one or two babies on the settings screen and set their names.  Then, on the home screen of your device, long-press the home screen and select \"Widgets\" and then \"Baby Tracker\".  You have two choices, one that includes diapers and sleeping or one that is a little taller that also includes crying tracking.  Selecting the widget will add it to your home screen.\n\nOnce the widget is turned on, just tap the box to record a feeding. diaper change, start/end of sleep or crying.  If you tap something by mistake, you can undo by tapping a second time within thirty seconds.  You can also remove the last entry or all data by using the menu on any report screen.  That\'s it!</string>
    <string name="help_done_caption">Done</string>
    <string name="confirm_delete">Are you sure you want to delete all tracking data?</string>
    <string name="tab_name_feeding">Feedings</string>
    <string name="tab_name_wet_diaper">Wet Diapers</string>
    <string name="tab_name_bm_diaper">BM Diapers</string>
    <string name="tab_name_sleep">Sleeping</string>
    <string name="tab_name_crying">Crying</string>
    <string name="tab_name_custom">Custom</string>
    <string name="tab_name_custom_time">Custom (Time)</string>
    <string name="feeding_event_string">was fed</string>
    <string name="wet_diaper_event_string">had a wet diaper</string>
    <string name="bm_diaper_event_string">had a dirty diaper</string>
    <string name="sleeping_event_string">slept from</string>
    <string name="crying_event_string">cried from</string>
    <string name="custom_event_string">%1$s from</string>
    <string name="email_button_caption">Email This Data</string>
    <string name="email_all_button_caption">Email All Data</string>
    <string name="email_subject">Baby Tracker Data</string>
    <string name="no_email_error">Sorry, couldn\'t find an email app!</string>
    <string name="no_sleep">Tap to start sleep.</string>
    <string name="no_crying">Tap to record crying.</string>
    <string name="sleep_going">Sleep started at %1$s.</string>
    <string name="duration_string">%1$d:%2$02d</string>
    <string name="sleep_ended">Tap to start sleep (last: %1$s).</string>
    <string name="crying_going">Crying started at %1$s.</string>
    <string name="crying_ended">Tap to record crying (last: %1$s).</string>
    <string name="custom_going">%1$s started at %2$s.</string>
    <string name="custom_ended">Tap to record %1$s (last: %2$s).</string>
    <string name="no_custom">Tap to record %1$s event.</string>
    <string name="menu_remove_last">Remove Last Entry</string>
    <string name="menu_clear_data">Clear Data</string>
    <string name="confirm_clear_data">Are you sure you want to delete all task data?</string>
    <string name="confirm_remove_last">Are you sure you want to remove the last entry?</string>
    <string name="custom_name_category_title">Custom Category</string>
    <string name="custom_name_summary">Set a name for the custom category.</string>
    <string name="custom_name_title">Custom Category Name</string>
    <string name="custom_duration_title">Duration Event?</string>
    <string name="custom_duration_summary">Is this a duration event, like a nap, or more like a feeding.</string>
    <string name="twenty_four_hour_category_title">Time Format</string>
    <string name="twenty_four_hour_summary">Use 24 hour times?</string>
    <string name="twenty_four_hour_title">24 Hour Time</string>
    <string name="twenty_four_hour_key">24_hour_time</string>
    <string name="default_custom_name">Custom</string>
    <string name="custom_name_key">custom_key</string>
    <string name="custom_duration_key">custom_duration_key</string>
    <string name="toast_shown">toast_shown</string>
    <string name="tip_toast">Tip:  tap your baby\'s name on the widget to show the settings.</string>
    <string name="enter_quantity_text">Enter feeding quantity (in oz):</string>
    <string name="done">Done</string>
    <string name="display_amount">(%1$s oz)</string>
</resources>
