<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/baby_name_category_title">
        <CheckBoxPreference
            android:key="@string/enable_baby_key_1"
            android:defaultValue="true"
            android:title="@string/baby_enable_title"
            android:summary="@string/baby_enable_summary" />
        <EditTextPreference
            android:summary="@string/baby_name_summary"
            android:title="@string/baby_name_title"
            android:defaultValue="@string/default_baby_name_1"
            android:key="@string/baby_name_key_1"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/baby_name_category_title">
        <CheckBoxPreference
            android:key="@string/enable_baby_key_2"
            android:defaultValue="true"
            android:title="@string/baby_enable_title"
            android:summary="@string/baby_enable_summary" />
        <EditTextPreference
            android:summary="@string/baby_name_summary"
            android:title="@string/baby_name_title"
            android:defaultValue="@string/default_baby_name_2"
            android:key="@string/baby_name_key_2"/>
    </PreferenceCategory>    
    <PreferenceCategory
            android:title="@string/custom_name_category_title">
        <EditTextPreference
            android:summary="@string/custom_name_summary"
            android:title="@string/custom_name_title"
            android:defaultValue="@string/default_custom_name"
            android:key="@string/custom_name_key"/>
    </PreferenceCategory>    
</PreferenceScreen>